--- a/Sample.Mvc/Sample.Mvc.csproj
+++ b/Sample.Mvc/Sample.Mvc.csproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -183,9 +183,9 @@
       <Project>{C471B0E5-0AE4-48E0-A938-02AEDA030C5E}</Project>
       <Name>MvcMiniProfiler.Wcf</Name>
     </ProjectReference>
-    <ProjectReference Include="..\MvcMiniProfiler\MvcMiniProfiler.csproj">
+    <ProjectReference Include="..\MvcMiniProfiler\MiniProfiler.csproj">
       <Project>{386222BD-6B6E-480F-A342-8DE1AB516E2C}</Project>
-      <Name>MvcMiniProfiler</Name>
+      <Name>MiniProfiler</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
