--- a/Sample.WebForms/Sample.WebForms.csproj
+++ b/Sample.WebForms/Sample.WebForms.csproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -133,9 +133,9 @@
     <Content Include="Site.Master" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\MvcMiniProfiler\MvcMiniProfiler.csproj">
+    <ProjectReference Include="..\MvcMiniProfiler\MiniProfiler.csproj">
       <Project>{386222BD-6B6E-480F-A342-8DE1AB516E2C}</Project>
-      <Name>MvcMiniProfiler</Name>
+      <Name>MiniProfiler</Name>
     </ProjectReference>
     <ProjectReference Include="..\Sample.Mvc\Sample.Mvc.csproj">
       <Project>{5D54F88D-4C79-4EAB-B7B7-C8DE78F5DDA7}</Project>
